--- a/index.html
+++ b/index.html
@@ -75,5 +75,17 @@
       </div>
       <!-- End: .main-account -->
     </header>
+
+    <main>
+      <div class="main-flex">
+        <div class="main-feed">
+          <div class="home-bar">
+            <span>Home</span>
+            <i class="material-icons-outlined">auto_awesome</i>
+          </div>
+        </div>
+        <div class="side feed"></div>
+      </div>
+    </main>
   </body>
 </html>
