--- a/index.html
+++ b/index.html
@@ -83,8 +83,35 @@
             <span>Home</span>
             <i class="material-icons-outlined">auto_awesome</i>
           </div>
+          <!-- End: .home-bar -->
+
+          <div class="new-tweet">
+            <img src="images/userSubscriptions.jpeg" alt="" class="tweet-img" />
+
+            <div class="new-tweet-details">
+              <input type="text" placeholder="What's happening" />
+              <div class="new-tweet-actions">
+                <ul>
+                  <li><i class="material-icons-outlined">image</i></li>
+                  <li><i class="material-icons-outlined">gif_box</i></li>
+                  <li><i class="material-icons-outlined">poll</i></li>
+                  <li>
+                    <i class="material-icons-outlined">sentiment_satisfied</i>
+                  </li>
+                  <li><i class="material-icons-outlined">event</i></li>
+                </ul>
+                <!-- End: ul -->
+                <button class="tweet-button">Sweet</button>
+              </div>
+              <!-- End: .new-tweet-actions -->
+            </div>
+            <!-- End: .new-tweet-details -->
+          </div>
+          <!-- End: .new-tweet -->
         </div>
-        <div class="side feed"></div>
+        <!-- End: .main-feed -->
+        <div class="side-feed"></div>
+        <!-- End: saide-feed -->
       </div>
     </main>
   </body>
