.feed-tweet AND All inline class

--- a/index.html
+++ b/index.html
@@ -108,6 +108,276 @@
             <!-- End: .new-tweet-details -->
           </div>
           <!-- End: .new-tweet -->
+
+          <div class="feed-tweet">
+            <img src="images/userSubscriptions.jpeg" alt="" class="tweet-img" />
+            <div class="feed-tweet-details">
+              <div class="tweeter-details">
+                <a href="" class="tweeter-name">
+                  Riyad Salem
+                  <span class="tweeter-handle">@riyadmslem • 1h</span>
+                </a>
+                <i class="material-icons-outlined">more_horiz</i>
+              </div>
+              <!-- End: .tweeter-handle -->
+              <div class="tweet-text">
+                <p>Please like this pages and subscibe to riyadmslem</p>
+              </div>
+              <!-- End: .tweet-text -->
+              <div class="tweet-icons">
+                <i class="material-icons-outlined">chat_bubble_outline</i>
+                <i class="material-icons-outlined">restart_alt</i>
+                <i class="material-icons-outlined">favorite_border</i>
+                <i class="material-icons-outlined">upload</i>
+              </div>
+              <!-- End: .tweet-icons -->
+            </div>
+            <!-- End: .feed-tweet-details -->
+          </div>
+          <!-- End: .feed-tweet -->
+
+          <div class="feed-tweet">
+            <img src="images/userSubscriptions.jpeg" alt="" class="tweet-img" />
+            <div class="feed-tweet-details">
+              <div class="tweeter-details">
+                <a href="" class="tweeter-name">
+                  Riyad Salem
+                  <span class="tweeter-handle">@riyadmslem • 1h</span>
+                </a>
+                <i class="material-icons-outlined">more_horiz</i>
+              </div>
+              <!-- End: .tweeter-handle -->
+              <div class="tweet-text">
+                <p>Please like this pages and subscibe to riyadmslem</p>
+              </div>
+              <!-- End: .tweet-text -->
+              <div class="tweet-icons">
+                <i class="material-icons-outlined">chat_bubble_outline</i>
+                <i class="material-icons-outlined">restart_alt</i>
+                <i class="material-icons-outlined">favorite_border</i>
+                <i class="material-icons-outlined">upload</i>
+              </div>
+              <!-- End: .tweet-icons -->
+            </div>
+            <!-- End: .feed-tweet-details -->
+          </div>
+          <!-- End: .feed-tweet -->
+
+          <div class="feed-tweet">
+            <img src="images/userSubscriptions.jpeg" alt="" class="tweet-img" />
+            <div class="feed-tweet-details">
+              <div class="tweeter-details">
+                <a href="" class="tweeter-name">
+                  Riyad Salem
+                  <span class="tweeter-handle">@riyadmslem • 1h</span>
+                </a>
+                <i class="material-icons-outlined">more_horiz</i>
+              </div>
+              <!-- End: .tweeter-handle -->
+              <div class="tweet-text">
+                <p>Please like this pages and subscibe to riyadmslem</p>
+              </div>
+              <!-- End: .tweet-text -->
+              <div class="tweet-icons">
+                <i class="material-icons-outlined">chat_bubble_outline</i>
+                <i class="material-icons-outlined">restart_alt</i>
+                <i class="material-icons-outlined">favorite_border</i>
+                <i class="material-icons-outlined">upload</i>
+              </div>
+              <!-- End: .tweet-icons -->
+            </div>
+            <!-- End: .feed-tweet-details -->
+          </div>
+          <!-- End: .feed-tweet -->
+
+          <div class="feed-tweet">
+            <img src="images/userSubscriptions.jpeg" alt="" class="tweet-img" />
+            <div class="feed-tweet-details">
+              <div class="tweeter-details">
+                <a href="" class="tweeter-name">
+                  Riyad Salem
+                  <span class="tweeter-handle">@riyadmslem • 1h</span>
+                </a>
+                <i class="material-icons-outlined">more_horiz</i>
+              </div>
+              <!-- End: .tweeter-handle -->
+              <div class="tweet-text">
+                <p>Please like this pages and subscibe to riyadmslem</p>
+              </div>
+              <!-- End: .tweet-text -->
+              <div class="tweet-icons">
+                <i class="material-icons-outlined">chat_bubble_outline</i>
+                <i class="material-icons-outlined">restart_alt</i>
+                <i class="material-icons-outlined">favorite_border</i>
+                <i class="material-icons-outlined">upload</i>
+              </div>
+              <!-- End: .tweet-icons -->
+            </div>
+            <!-- End: .feed-tweet-details -->
+          </div>
+          <!-- End: .feed-tweet -->
+
+          <div class="feed-tweet">
+            <img src="images/userSubscriptions.jpeg" alt="" class="tweet-img" />
+            <div class="feed-tweet-details">
+              <div class="tweeter-details">
+                <a href="" class="tweeter-name">
+                  Riyad Salem
+                  <span class="tweeter-handle">@riyadmslem • 1h</span>
+                </a>
+                <i class="material-icons-outlined">more_horiz</i>
+              </div>
+              <!-- End: .tweeter-handle -->
+              <div class="tweet-text">
+                <p>Please like this pages and subscibe to riyadmslem</p>
+              </div>
+              <!-- End: .tweet-text -->
+              <div class="tweet-icons">
+                <i class="material-icons-outlined">chat_bubble_outline</i>
+                <i class="material-icons-outlined">restart_alt</i>
+                <i class="material-icons-outlined">favorite_border</i>
+                <i class="material-icons-outlined">upload</i>
+              </div>
+              <!-- End: .tweet-icons -->
+            </div>
+            <!-- End: .feed-tweet-details -->
+          </div>
+          <!-- End: .feed-tweet -->
+
+          <div class="feed-tweet">
+            <img src="images/userSubscriptions.jpeg" alt="" class="tweet-img" />
+            <div class="feed-tweet-details">
+              <div class="tweeter-details">
+                <a href="" class="tweeter-name">
+                  Riyad Salem
+                  <span class="tweeter-handle">@riyadmslem • 1h</span>
+                </a>
+                <i class="material-icons-outlined">more_horiz</i>
+              </div>
+              <!-- End: .tweeter-handle -->
+              <div class="tweet-text">
+                <p>Please like this pages and subscibe to riyadmslem</p>
+              </div>
+              <!-- End: .tweet-text -->
+              <div class="tweet-icons">
+                <i class="material-icons-outlined">chat_bubble_outline</i>
+                <i class="material-icons-outlined">restart_alt</i>
+                <i class="material-icons-outlined">favorite_border</i>
+                <i class="material-icons-outlined">upload</i>
+              </div>
+              <!-- End: .tweet-icons -->
+            </div>
+            <!-- End: .feed-tweet-details -->
+          </div>
+          <!-- End: .feed-tweet -->
+
+          <div class="feed-tweet">
+            <img src="images/userSubscriptions.jpeg" alt="" class="tweet-img" />
+            <div class="feed-tweet-details">
+              <div class="tweeter-details">
+                <a href="" class="tweeter-name">
+                  Riyad Salem
+                  <span class="tweeter-handle">@riyadmslem • 1h</span>
+                </a>
+                <i class="material-icons-outlined">more_horiz</i>
+              </div>
+              <!-- End: .tweeter-handle -->
+              <div class="tweet-text">
+                <p>Please like this pages and subscibe to riyadmslem</p>
+              </div>
+              <!-- End: .tweet-text -->
+              <div class="tweet-icons">
+                <i class="material-icons-outlined">chat_bubble_outline</i>
+                <i class="material-icons-outlined">restart_alt</i>
+                <i class="material-icons-outlined">favorite_border</i>
+                <i class="material-icons-outlined">upload</i>
+              </div>
+              <!-- End: .tweet-icons -->
+            </div>
+            <!-- End: .feed-tweet-details -->
+          </div>
+          <!-- End: .feed-tweet -->
+
+          <div class="feed-tweet">
+            <img src="images/userSubscriptions.jpeg" alt="" class="tweet-img" />
+            <div class="feed-tweet-details">
+              <div class="tweeter-details">
+                <a href="" class="tweeter-name">
+                  Riyad Salem
+                  <span class="tweeter-handle">@riyadmslem • 1h</span>
+                </a>
+                <i class="material-icons-outlined">more_horiz</i>
+              </div>
+              <!-- End: .tweeter-handle -->
+              <div class="tweet-text">
+                <p>Please like this pages and subscibe to riyadmslem</p>
+              </div>
+              <!-- End: .tweet-text -->
+              <div class="tweet-icons">
+                <i class="material-icons-outlined">chat_bubble_outline</i>
+                <i class="material-icons-outlined">restart_alt</i>
+                <i class="material-icons-outlined">favorite_border</i>
+                <i class="material-icons-outlined">upload</i>
+              </div>
+              <!-- End: .tweet-icons -->
+            </div>
+            <!-- End: .feed-tweet-details -->
+          </div>
+          <!-- End: .feed-tweet -->
+
+          <div class="feed-tweet">
+            <img src="images/userSubscriptions.jpeg" alt="" class="tweet-img" />
+            <div class="feed-tweet-details">
+              <div class="tweeter-details">
+                <a href="" class="tweeter-name">
+                  Riyad Salem
+                  <span class="tweeter-handle">@riyadmslem • 1h</span>
+                </a>
+                <i class="material-icons-outlined">more_horiz</i>
+              </div>
+              <!-- End: .tweeter-handle -->
+              <div class="tweet-text">
+                <p>Please like this pages and subscibe to riyadmslem</p>
+              </div>
+              <!-- End: .tweet-text -->
+              <div class="tweet-icons">
+                <i class="material-icons-outlined">chat_bubble_outline</i>
+                <i class="material-icons-outlined">restart_alt</i>
+                <i class="material-icons-outlined">favorite_border</i>
+                <i class="material-icons-outlined">upload</i>
+              </div>
+              <!-- End: .tweet-icons -->
+            </div>
+            <!-- End: .feed-tweet-details -->
+          </div>
+          <!-- End: .feed-tweet -->
+
+          <div class="feed-tweet">
+            <img src="images/userSubscriptions.jpeg" alt="" class="tweet-img" />
+            <div class="feed-tweet-details">
+              <div class="tweeter-details">
+                <a href="" class="tweeter-name">
+                  Riyad Salem
+                  <span class="tweeter-handle">@riyadmslem • 1h</span>
+                </a>
+                <i class="material-icons-outlined">more_horiz</i>
+              </div>
+              <!-- End: .tweeter-handle -->
+              <div class="tweet-text">
+                <p>Please like this pages and subscibe to riyadmslem</p>
+              </div>
+              <!-- End: .tweet-text -->
+              <div class="tweet-icons">
+                <i class="material-icons-outlined">chat_bubble_outline</i>
+                <i class="material-icons-outlined">restart_alt</i>
+                <i class="material-icons-outlined">favorite_border</i>
+                <i class="material-icons-outlined">upload</i>
+              </div>
+              <!-- End: .tweet-icons -->
+            </div>
+            <!-- End: .feed-tweet-details -->
+          </div>
+          <!-- End: .feed-tweet -->
         </div>
         <!-- End: .main-feed -->
         <div class="side-feed"></div>
