.side-feed >>>> .search

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <span style="font-weight: 600">More</span>
         </a>
 
-        <button class="tweet-button">Sweet</button>
+        <button class="tweet-button">Rweet</button>
       </div>
       <!-- End: .nav-links -->
 
@@ -101,7 +101,7 @@
                   <li><i class="material-icons-outlined">event</i></li>
                 </ul>
                 <!-- End: ul -->
-                <button class="tweet-button">Sweet</button>
+                <button class="tweet-button">Rweet</button>
               </div>
               <!-- End: .new-tweet-actions -->
             </div>
@@ -148,7 +148,13 @@
               </div>
               <!-- End: .tweeter-handle -->
               <div class="tweet-text">
-                <p>Please like this pages and subscibe to riyadmslem</p>
+                <p>
+                  Please like this pages @riyadmslem Please like this pages
+                  @riyadmslem Please like this pages @riyadmslem Please like
+                  this pages @riyadmslem Please like this pages @riyadmslem
+                  Please like this pages @riyadmslem Please like this pages
+                  @riyadmslem Please like this pages @riyadmslem
+                </p>
               </div>
               <!-- End: .tweet-text -->
               <div class="tweet-icons">
@@ -380,9 +386,22 @@
           <!-- End: .feed-tweet -->
         </div>
         <!-- End: .main-feed -->
-        <div class="side-feed"></div>
+
+        <div class="side-feed">
+          <div class="search">
+            <input type="text" placeholder="Search Rwitter" />
+          </div>
+          <!-- End: .search -->
+
+          <div class="trending"></div>
+          <!-- End: .trending -->
+
+          <div class="follow"></div>
+          <!-- End: .follow -->
+        </div>
         <!-- End: saide-feed -->
       </div>
+      <!-- End: .main-flex -->
     </main>
   </body>
 </html>
