.trending &&& ALL classes

--- a/index.html
+++ b/index.html
@@ -393,10 +393,103 @@
           </div>
           <!-- End: .search -->
 
-          <div class="trending"></div>
+          <div class="trending">
+            <h1 class="h1-title">What's happening</h1>
+            <div class="trending-itme">
+              <div class="item-category">
+                <span> Trends for you</span>
+                <i class="material-icons-outlined">more_horiz</i>
+              </div>
+              <p>RiyadMSalem</p>
+              <span>100k Rweets</span>
+            </div>
+            <!-- End: .trending-itme -->
+
+            <div class="trending-itme">
+              <div class="item-category">
+                <span> Trends for you</span>
+                <i class="material-icons-outlined">more_horiz</i>
+              </div>
+              <p>RiyadMSalem</p>
+              <span>100k Rweets</span>
+            </div>
+            <!-- End: .trending-itme -->
+
+            <div class="trending-itme">
+              <div class="item-category">
+                <span> Trends for you</span>
+                <i class="material-icons-outlined">more_horiz</i>
+              </div>
+              <p>RiyadMSalem</p>
+              <span>100k Rweets</span>
+            </div>
+            <!-- End: .trending-itme -->
+
+            <div class="trending-itme">
+              <div class="item-category">
+                <span> Trends for you</span>
+                <i class="material-icons-outlined">more_horiz</i>
+              </div>
+              <p>RiyadMSalem</p>
+              <span>100k Rweets</span>
+            </div>
+            <!-- End: .trending-itme -->
+
+            <div class="trending-itme">
+              <div class="item-category">
+                <span> Trends for you</span>
+                <i class="material-icons-outlined">more_horiz</i>
+              </div>
+              <p>RiyadMSalem</p>
+              <span>100k Rweets</span>
+            </div>
+            <!-- End: .trending-itme -->
+
+            <a href="" class="show-more">Show more</a>
+          </div>
           <!-- End: .trending -->
 
-          <div class="follow"></div>
+          <div class="follow">
+            <h1 class="h1-title">Who to follow</h1>
+            <div class="follow-profile">
+              <div class="follow-cont">
+              <img
+                src="images/userSubscriptions.jpeg"
+                alt=""
+                class="tweet-img"
+              />
+              <div class="follow-details">
+                <a href="">
+                  Riyad Salem </a>
+                  <span>@riyadmsalem_<span id="follows">follows you</span>
+              
+              </div>
+              <!-- End: .follow-details -->
+            </div><!-- End: follow-cont -->
+              <button class="tweet-button">follow</button>
+            </div>
+            <!-- End: .follow-profile -->
+
+            <div class="follow-profile">
+              <div class="follow-cont">
+              <img
+                src="images/userSubscriptions.jpeg"
+                alt=""
+                class="tweet-img"
+              />
+              <div class="follow-details">
+                <a href="">
+                  Riyad Salem </a>
+                  <span>@riyadmsalem_<span id="follows">follows you</span>
+              </div>
+              <!-- End: .follow-details -->
+            </div><!-- End: follow-cont -->
+              <button class="tweet-button">follow</button>
+            </div>
+            <!-- End: .follow-profile -->
+
+            <a href="" class="show-more">Show more</a>
+          </div>
           <!-- End: .follow -->
         </div>
         <!-- End: saide-feed -->
